// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph margin renders 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  margin: 4px;
  font-size: 12px;
  line-height: 16px;
  max-width: 192px;
}

.c2 {
  margin: 8px;
  font-size: 12px;
  line-height: 16px;
  max-width: 192px;
}

.c3 {
  margin: 16px;
  font-size: 12px;
  line-height: 16px;
  max-width: 192px;
}

.c4 {
  margin: 0px;
  font-size: 12px;
  line-height: 16px;
  max-width: 192px;
}

.c5 {
  margin-bottom: 4px;
  font-size: 12px;
  line-height: 16px;
  max-width: 192px;
}

.c6 {
  margin-top: 4px;
  font-size: 12px;
  line-height: 16px;
  max-width: 192px;
}

<div
  className="c0"
>
  <p
    className="c1"
  />
  <p
    className="c2"
  />
  <p
    className="c3"
  />
  <p
    className="c4"
  />
  <p
    className="c5"
  />
  <p
    className="c6"
  />
</div>
`;

exports[`Paragraph renders 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 12px;
  line-height: 16px;
  max-width: 192px;
}

<div
  className="c0"
>
  <p
    className="c1"
  />
</div>
`;

exports[`Paragraph size renders 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 9.333333333333334px;
  line-height: 13.333333333333334px;
  max-width: 149.33333333333334px;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  max-width: 192px;
}

.c3 {
  font-size: 14.666666666666666px;
  line-height: 18.666666666666668px;
  max-width: 234.66666666666666px;
}

.c4 {
  font-size: 17.333333333333332px;
  line-height: 21.333333333333332px;
  max-width: 277.3333333333333px;
}

.c5 {
  font-size: 22.666666666666664px;
  line-height: 26.666666666666664px;
  max-width: 362.66666666666663px;
}

.c6 {
  font-size: 12px;
  line-height: 16px;
  max-width: none;
}

<div
  className="c0"
>
  <p
    className="c1"
    size="small"
  />
  <p
    className="c2"
    size="medium"
  />
  <p
    className="c3"
    size="large"
  />
  <p
    className="c4"
    size="xlarge"
  />
  <p
    className="c5"
    size="xxlarge"
  />
  <p
    className="c6"
  />
  <p
    className="c2"
  />
</div>
`;

exports[`Paragraph textAlign renders 1`] = `
.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  font-size: 12px;
  line-height: 16px;
  max-width: 192px;
  text-align: left;
}

.c2 {
  font-size: 12px;
  line-height: 16px;
  max-width: 192px;
  text-align: center;
}

.c3 {
  font-size: 12px;
  line-height: 16px;
  max-width: 192px;
  text-align: right;
}

<div
  className="c0"
>
  <p
    className="c1"
  />
  <p
    className="c2"
  />
  <p
    className="c3"
  />
</div>
`;
